tests/elab/ok/match/or_patterns/coverage.pion
def is_zero_or_one = fun(x: Int) => match x {
    0 | 1 => true,
    0 => true,
    1 => true,
    _ => false,
};

def is_true_or_false = fun(x: Bool) => match x {
    true | false => true,
    false => true,
    _ => false,
};

def is_true_or_false_record = fun(x: {b : Bool}) => match x {
    {b = true} | {b = false} => true,
    {b = true} => true,
    _ => false,
};

def is_true_or_false_record2 = fun(x: {b : Bool}) => match x {
    {b = true | false} => true,
    {b = false} => true,
    _ => false,
};
