tests/elab/errors/pattern_matching/inexhaustive_match.pion
def foo = fun(x: Bool) => match x {
    false => 1,
};
